Dark mode fix

--- a/styles/poormoi.css
+++ b/styles/poormoi.css
@@ -11,8 +11,6 @@ html {
 @media(prefers-color-scheme:light){div.nav{background-color:#fff;}body{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
 @media(prefers-color-scheme:no-preference){div.nav{background-color:#fff;}body{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
 body {
-  background-color: #fff;
-  color: #000;
   font-family: Garamond;
   font-size: 12pt;
 }
@@ -79,7 +77,6 @@ div.cvhead {
 div.blogpost {
   border-left: solid;
   border-width: thin;
-  border-color: #000;
   padding: 0 2% 0 2%;
   margin: 0 0 10% 0;
 }
